link to my instagram

--- a/index.html
+++ b/index.html
@@ -116,16 +116,24 @@
             <label for="toggle-3" class="photo-btn photo-btn-3"></label>
 
             <main class="main-view">
+
                 <div class="social">
-                    <svg class="social__icon">
-                        <use xlink:href="img/sprite.svg#icon-instagram"></use>
-                    </svg>
-                    <svg class="social__icon">
-                        <use xlink:href="img/sprite.svg#icon-whatsapp"></use>
-                    </svg>
-                    <svg class="social__icon">
-                        <use xlink:href="img/sprite.svg#icon-pinterest2"></use>
-                    </svg>
+                    <a href="https://www.instagram.com/the.pendar/" target="_blank" class="social__link">
+                        <svg class="social__icon">
+                            <use xlink:href="img/sprite.svg#icon-instagram">
+                            </use>
+                        </svg>
+                    </a>
+                    <a href="#" class="social__link">
+                        <svg class="social__icon">
+                            <use xlink:href="img/sprite.svg#icon-whatsapp"></use>
+                        </svg>
+                    </a>
+                    <a href="#" class="social__link">
+                        <svg class="social__icon">
+                            <use xlink:href="img/sprite.svg#icon-pinterest2"></use>
+                        </svg>
+                    </a>
                 </div>
             </main>
         </div>
