--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
     <div class="container">
 
         <header class="header">
-            <svg class="logo">
-                <use xlink:href="img/sprite.svg#icon-leaf"></use>
+            <svg class="logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 500 500">
+                <path
+                    d="M471.098 436.729H318.732c21.56-8.952 41.201-21.617 58.123-37.197h29.286c58.371 0 105.859-47.488 105.859-105.86 0-31.061-25.27-56.331-56.33-56.331h-15.001v-27.877c0-10.481-8.527-19.008-19.008-19.008H64.907c-10.481 0-19.008 8.527-19.008 19.008v33.269a7.5 7.5 0 0015 0v-33.269a4.013 4.013 0 014.008-4.008h89.185v34.316a18.348 18.348 0 00-5.548 3.832l-28.154 28.42a18.258 18.258 0 00-5.318 12.926v62.703c0 10.127 8.239 18.366 18.366 18.366h56.308c10.127 0 18.367-8.239 18.367-18.366V284.95c0-4.874-1.889-9.464-5.319-12.926l-28.153-28.419a18.346 18.346 0 00-5.548-3.833v-34.316h252.569a4.013 4.013 0 014.008 4.008V254.38c-.018 100.286-81.595 182.349-182.385 182.349-92.03 0-169.852-68.773-181.021-159.973-.503-4.111-4.243-7.041-8.356-6.533a7.5 7.5 0 00-6.533 8.356c8.858 72.328 56.445 131.619 120.429 158.15H15.47c-8.53 0-15.47 6.94-15.47 15.47 0 21.715 17.666 39.381 39.381 39.381h322a7.5 7.5 0 000-15h-322C25.937 476.58 15 465.643 15 452.199a.47.47 0 01.47-.47h455.628a.47.47 0 01.47.47c0 13.444-10.937 24.381-24.381 24.381H396.38a7.5 7.5 0 000 15h50.807c21.715 0 39.381-17.666 39.381-39.381 0-8.531-6.94-15.47-15.47-15.47zM192.137 282.58c.629.635.975 1.476.975 2.37v62.703a3.37 3.37 0 01-3.367 3.366h-56.308a3.37 3.37 0 01-3.366-3.366V284.95c0-.894.346-1.735.975-2.37l23.045-23.263v21.334a7.5 7.5 0 0015 0v-21.334zm246.993-3.567h16.54c8.083 0 14.658 6.576 14.658 14.658 0 33.613-25.976 61.254-58.904 63.952 14.443-23.426 24.133-50.079 27.706-78.61zm1.545-26.672h14.995c22.79 0 41.33 18.541 41.33 41.331 0 50.1-40.759 90.86-90.859 90.86H391.64a199.32 199.32 0 009.489-11.672h5.012c43.664 0 79.188-35.523 79.188-79.188 0-16.354-13.305-29.658-29.658-29.658h-15.239c.187-3.876.238-7.792.243-11.673zM233.406 170.574a7.409 7.409 0 007.409-7.409c0-18.362 19.757-19.588 19.757-45.108 0-25.545-19.757-26.711-19.757-45.114 0-18.344 19.757-19.609 19.757-45.114a7.409 7.409 0 10-14.818 0c0 18.363-19.757 19.592-19.757 45.114 0 25.548 19.757 26.709 19.757 45.114 0 18.361-19.757 19.589-19.757 45.108a7.409 7.409 0 007.409 7.409zM289.41 170.574a7.409 7.409 0 007.409-7.409c0-18.362 19.757-19.588 19.757-45.108 0-25.545-19.757-26.711-19.757-45.114 0-18.344 19.757-19.609 19.757-45.114a7.409 7.409 0 10-14.818 0c0 18.363-19.757 19.592-19.757 45.114 0 25.548 19.757 26.709 19.757 45.114 0 18.361-19.757 19.589-19.757 45.108a7.409 7.409 0 007.409 7.409zM177.402 170.574a7.409 7.409 0 007.409-7.409c0-18.362 19.757-19.588 19.757-45.108 0-25.545-19.757-26.711-19.757-45.114 0-18.344 19.757-19.609 19.757-45.114a7.409 7.409 0 10-14.818 0c0 18.363-19.757 19.592-19.757 45.114 0 25.548 19.757 26.709 19.757 45.114 0 18.361-19.757 19.589-19.757 45.108a7.409 7.409 0 007.409 7.409z" />
             </svg>
-            <h1 class="logo__title">Teabar</h1>
+
+            <h1 class="logo__title">TeaBar</h1>
 
             <nav class="nav">
                 <a href="#" class="nav__item">locations</a>
@@ -80,7 +82,7 @@
                     <div class="description">
                         <p class="paragraph">
                             Black tea is made from the leaves of a bush called Camellia sinensis. It has caffeine as
-                            well as other stimulants and antioxidants. Lots of people in the U.S. drink it either hot or
+                            well as other stimulants and antioxidants. People drink it either hot or
                             cold. It should always be steeped in hot water before it is cooled.
                         </p>
 
@@ -101,9 +103,6 @@
                     </button>
                 </div>
 
-                <div class="legal">
-                    &copy; 2021 by Teabar. All right reserved.
-                </div>
             </nav>
 
             <input type="radio" name="photo" id="toggle-1" class="radio-icon radio-toggle-1" checked>
@@ -120,8 +119,7 @@
                 <div class="social">
                     <a href="https://www.instagram.com/the.pendar/" target="_blank" class="social__link">
                         <svg class="social__icon">
-                            <use xlink:href="img/sprite.svg#icon-instagram">
-                            </use>
+                            <use xlink:href="img/sprite.svg#icon-instagram"></use>
                         </svg>
                     </a>
                     <a href="#" class="social__link">
@@ -134,6 +132,10 @@
                             <use xlink:href="img/sprite.svg#icon-pinterest2"></use>
                         </svg>
                     </a>
+                </div>
+
+                <div class="legal">
+                    &copy; Powered by ☕.
                 </div>
             </main>
         </div>
